--- a/.github/workflows/uploadSheetContents.yml
+++ b/.github/workflows/uploadSheetContents.yml
@@ -9,6 +9,7 @@ env:
   PICKER_CONTENTFUL_MANAGEMENT_ACCESS_TOKEN: ${{secrets.PICKER_CONTENTFUL_MANAGEMENT_ACCESS_TOKEN}}
   PICKER_GCP_CLIENT_EMAIL: ${{secrets.PICKER_GCP_CLIENT_EMAIL}}
   PICKER_GCP_PRIVATE_KEY: ${{secrets.PICKER_GCP_PRIVATE_KEY}}
+  PICKER_AMPLIFY_DEPLOY_WEBHOOK_URL_STAGING: ${{secrets.PICKER_AMPLIFY_DEPLOY_WEBHOOK_URL_STAGING}}
 jobs:
   build:
     runs-on: ubuntu-latest
