--- a/track-and-field/.gitignore
+++ b/track-and-field/.gitignore
@@ -90,3 +90,24 @@ sw.*
 *.swp
 
 **/generated
+
+#amplify-do-not-edit-begin
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/logs
+amplify/mock-data
+amplify/backend/amplify-meta.json
+amplify/backend/.temp
+build/
+dist/
+aws-exports.js
+awsconfiguration.json
+amplifyconfiguration.json
+amplifyconfiguration.dart
+amplify-build-config.json
+amplify-gradle-config.json
+amplifytools.xcconfig
+team-provider-info.json
+.secret-*
+**.sample
+#amplify-do-not-edit-end
