--- a/track-and-field/package.json
+++ b/track-and-field/package.json
@@ -17,8 +17,9 @@
     "@contentful/rich-text-html-renderer": "^15.6.0",
     "@contentful/rich-text-types": "^15.6.0",
     "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/composition-api": "^0.29.3",
+    "@nuxtjs/composition-api": "^0.32.0",
     "@nuxtjs/markdownit": "^2.0.0",
+    "aws-amplify": "^4.3.16",
     "chart.js": "^3.6.0",
     "chartjs-plugin-datalabels": "^2.0.0",
     "core-js": "^3.19.1",
@@ -60,6 +61,6 @@
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "vue-jest": "^3.0.7",
-    "vuex-module-decorators": "^1.0.1"
+    "vuex-module-decorators": "1.0.1"
   }
 }
