--- a/track-and-field/.gitignore
+++ b/track-and-field/.gitignore
@@ -100,6 +100,7 @@ amplify/backend/amplify-meta.json
 amplify/backend/.temp
 build/
 dist/
+node_modules/
 aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
@@ -107,7 +108,6 @@ amplifyconfiguration.dart
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
-team-provider-info.json
 .secret-*
 **.sample
 #amplify-do-not-edit-end
