--- a/picker-app/.eslintrc.json
+++ b/picker-app/.eslintrc.json
@@ -21,7 +21,8 @@
         "alphabetize": { "order": "asc", "caseInsensitive": true },
         "pathGroups": [
           { "pattern": "react", "group": "external", "position": "before" },
-          { "pattern": "next", "group": "external", "position": "before" }
+          { "pattern": "next", "group": "external", "position": "before" },
+          { "pattern": "next/*", "group": "external", "position": "before" }
         ]
       }
     ],
