--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -7,7 +7,9 @@
     "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "yarn lint --fix",
+    "fix": "yarn lint --fix",
+    "lint:css": "stylelint ./src/**/*.{css,js,jsx,ts,tsx}",
+    "fix:css": "stylelint ./src/**/*.{css,js,jsx,ts,tsx} --fix",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'"
   },
   "dependencies": {
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.2",
+    "@stylelint/postcss-css-in-js": "^0.38.0",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
@@ -29,7 +32,13 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-import-access": "^1.0.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "postcss-syntax": "^0.36.2",
     "prettier": "^2.7.1",
+    "stylelint": "^14.13.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recess-order": "^3.0.0",
+    "stylelint-config-standard": "^28.0.0",
+    "stylelint-prettier": "^2.0.0",
     "typescript": "4.8.4"
   }
 }
