--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emotion/css": "^11.10.0",
     "@emotion/server": "^11.10.0",
+    "@radix-ui/react-aspect-ratio": "1.0.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
