--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -15,10 +15,18 @@
   "dependencies": {
     "@emotion/css": "^11.10.0",
     "@emotion/server": "^11.10.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.3",
+    "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-aspect-ratio": "1.0.0",
+    "@radix-ui/react-separator": "^1.0.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.2",
