--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@emotion/css": "^11.10.0",
+    "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
