--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -50,5 +50,9 @@
     "stylelint-config-standard": "^28.0.0",
     "stylelint-prettier": "^2.0.0",
     "typescript": "4.8.4"
+  },
+  "volta": {
+    "node": "18.10.0",
+    "yarn": "1.22.19"
   }
 }
