--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -23,10 +23,12 @@
     "@headlessui/react": "^1.7.3",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-aspect-ratio": "1.0.0",
+    "@radix-ui/react-label": "^1.0.0",
     "@radix-ui/react-separator": "^1.0.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.37.0",
     "sass": "^1.55.0"
   },
   "devDependencies": {
