--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build && next export",
+    "dev": "yarn codegen && next dev",
+    "export": "yarn codegen && next build && next export",
     "start": "next start",
     "lint": "next lint",
     "fix": "yarn lint --fix",
     "lint:css": "stylelint ./src/**/*.{css,js,jsx,ts,tsx}",
     "fix:css": "stylelint ./src/**/*.{css,js,jsx,ts,tsx} --fix",
-    "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'"
+    "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'",
+    "codegen": "graphql-codegen --config src/graphql/codegen.ts"
   },
   "dependencies": {
     "@emotion/css": "^11.10.0",
@@ -25,6 +26,10 @@
     "@radix-ui/react-aspect-ratio": "1.0.0",
     "@radix-ui/react-label": "^1.0.0",
     "@radix-ui/react-separator": "^1.0.0",
+    "@tanstack/react-query": "^4.10.3",
+    "apollo-server-micro": "^3.10.3",
+    "graphql": "^16.6.0",
+    "micro": "^9.4.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -33,7 +38,13 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.2",
+    "@graphql-codegen/cli": "^2.13.5",
+    "@graphql-codegen/typescript": "^2.7.3",
+    "@graphql-codegen/typescript-operations": "^2.5.3",
+    "@graphql-codegen/typescript-react-query": "^4.0.1",
+    "@graphql-codegen/typescript-resolvers": "^2.7.3",
     "@stylelint/postcss-css-in-js": "^0.38.0",
+    "@types/glob": "^8.0.0",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
@@ -44,6 +55,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-import-access": "^1.0.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "glob": "^8.0.3",
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.7.1",
     "stylelint": "^14.13.0",
