--- a/product-types/.gitignore
+++ b/product-types/.gitignore
@@ -1,16 +1,7 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
 
 # production
 /build
@@ -26,13 +17,9 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env*.local
-
-# vercel
-.vercel
+.env.local
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
 
-/src/graphql/generated
+/generated
