chore: yarnのマルチワークスペースを使でアプリケーションとスクリプトを分離、eslint, prettier, stylelint, .envなどはリポジトリ直下で管理するように修正

--- a/picker-scripts/tsconfig.json
+++ b/picker-scripts/tsconfig.json
@@ -1,28 +1,26 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "./src",
+    "baseUrl": "./",
     "target": "ES2018",
+    "module": "commonjs",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
-    "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "sourceMap": true,
-    "typeRoots": ["types", "node_modules/@types"],
+    "typeRoots": ["types", "node_modules/@types", "@types"],
     "paths": {
       "picker-types/*": ["../picker-types/*"],
-      "server/*": ["server/*"],
+      "generated/*": ["../picker-types/generated/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
