--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "yarn codegen && next dev",
+    "dev": "PICKER_ENV='local' && yarn codegen && next dev",
     "export": "yarn codegen && next build && next export",
     "start": "next start",
     "lint": "next lint",
@@ -12,8 +12,8 @@
     "fix:css": "stylelint ./src/**/*.{css,js,jsx,ts,tsx} --fix",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'",
     "codegen": "yarn codegen:contentful && yarn codegen:nexus && yarn codegen:graphql",
-    "codegen:contentful": "cd ../product-types && yarn codegen",
-    "codegen:nexus": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' --transpile-only src/graphql/nexus-schema.ts",
+    "codegen:contentful": "cd ../picker-types && yarn codegen",
+    "codegen:nexus": "ts-node -r tsconfig-paths/register --compiler-options '{\"module\":\"CommonJS\"}' --transpile-only src/graphql/nexus-schema.ts",
     "codegen:graphql": "graphql-codegen --config src/graphql/codegen.ts"
   },
   "dependencies": {
@@ -47,30 +47,13 @@
     "@graphql-codegen/typescript-operations": "^2.5.3",
     "@graphql-codegen/typescript-react-query": "^4.0.1",
     "@graphql-codegen/typescript-resolvers": "^2.7.3",
-    "@stylelint/postcss-css-in-js": "^0.38.0",
-    "@types/glob": "^8.0.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "contentful": "^9.2.5",
-    "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-import-access": "^1.0.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "glob": "^8.0.3",
     "postcss-syntax": "^0.36.2",
-    "prettier": "^2.7.1",
     "stylelint": "^14.13.0",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-recess-order": "^3.0.0",
-    "stylelint-config-standard": "^28.0.0",
-    "stylelint-prettier": "^2.0.0",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "4.8.4"
-  },
-  "volta": {
-    "node": "18.10.0",
-    "yarn": "1.22.19"
   }
 }
