--- a/picker-types/tsconfig.json
+++ b/picker-types/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "target": "ES2018",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
@@ -19,10 +19,9 @@
     "sourceMap": true,
     "typeRoots": ["types", "node_modules/@types"],
     "paths": {
-      "picker-types/*": ["../picker-types/*"],
-      "server/*": ["server/*"],
+      "generated/*": ["./generated/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts"],
   "exclude": ["node_modules"]
 }
