chore: ローカル環境の起動やビルドもリポジトリ直下のディレクトリで行えるように修正、lintやフォーマッタ系の管理はリポジトリ直下に完全に寄せた

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,21 @@
 {
-  "eslint.workingDirectories": [{ "mode": "auto" }],
+  "eslint.workingDirectories": ["."],
   "editor.formatOnSave": true,
   "prettier.bracketSameLine": false,
-  "prettier.configPath": "./picker-app/.prettierrc",
-  "prettier.prettierPath": "./picker-app/node_modules/prettier",
+  "prettier.configPath": "./.prettierrc",
+  "prettier.prettierPath": "./node_modules/prettier",
   "eslint.packageManager": "yarn",
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": {
     "source.fixAll": true,
     "source.fixAll.stylelint": true
   },
-  "stylelint.configBasedir": "./picker-app",
-  "stylelint.configFile": "./picker-app/.stylelintrc.js",
+  "stylelint.configBasedir": ".",
+  "stylelint.configFile": "./.stylelintrc.js",
   "stylelint.packageManager": "yarn",
-  "stylelint.stylelintPath": "./picker-app/node_modules/stylelint",
+  "stylelint.stylelintPath": "./node_modules/stylelint",
   "stylelint.customSyntax": "@stylelint/postcss-css-in-js",
   "stylelint.validate": ["css", "less", "postcss", "scss", "postcss-css-in-js", "typescriptreact", "javascriptreact"],
-  "stylelint.snippet": ["css", "less", "postcss", "tsx", "postcss-css-in-js", "typescriptreact", "javascriptreact"]
+  "stylelint.snippet": ["css", "less", "postcss", "tsx", "postcss-css-in-js", "typescriptreact", "javascriptreact"],
+  "eslint.run": "onType"
 }
