--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
+    "next/core-web-vitals",
     "prettier",
     "plugin:import/recommended",
     "plugin:import/warnings"
@@ -17,7 +18,12 @@
       {
         "groups": ["builtin", "external", "internal", ["parent", "sibling"], "object", "type", "index"],
         "pathGroupsExcludedImportTypes": ["builtin"],
-        "alphabetize": { "order": "asc", "caseInsensitive": true }
+        "alphabetize": { "order": "asc", "caseInsensitive": true },
+        "pathGroups": [
+          { "pattern": "react", "group": "external", "position": "before" },
+          { "pattern": "next", "group": "external", "position": "before" },
+          { "pattern": "next/*", "group": "external", "position": "before" }
+        ]
       }
     ],
     "unused-imports/no-unused-imports": "error"
@@ -31,5 +37,6 @@
         "alwaysTryTypes": true
       }
     }
-  }
+  },
+  "root": true
 }
