--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -3,16 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "PICKER_ENV='local' && yarn codegen && next dev",
-    "export": "yarn codegen && next build && next export",
+    "dev": "next dev",
+    "export": "next build && next export",
     "start": "next start",
     "lint": "next lint",
     "fix": "yarn lint --fix",
     "lint:css": "stylelint ./src/**/*.{css,js,jsx,ts,tsx}",
     "fix:css": "stylelint ./src/**/*.{css,js,jsx,ts,tsx} --fix",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'",
-    "codegen": "yarn codegen:contentful && yarn codegen:nexus && yarn codegen:graphql",
-    "codegen:contentful": "cd ../picker-types && yarn codegen",
+    "codegen": "yarn codegen:nexus && yarn codegen:graphql",
     "codegen:nexus": "ts-node -r tsconfig-paths/register --compiler-options '{\"module\":\"CommonJS\"}' --transpile-only src/graphql/nexus-schema.ts",
     "codegen:graphql": "graphql-codegen --config src/graphql/codegen.ts"
   },
@@ -32,6 +31,7 @@
     "@tanstack/react-query": "^4.10.3",
     "apollo-server-micro": "^3.10.3",
     "graphql": "^16.6.0",
+    "lodash-es": "^4.17.21",
     "micro": "^9.4.1",
     "next": "12.3.1",
     "nexus": "^1.3.0",
@@ -47,12 +47,11 @@
     "@graphql-codegen/typescript-operations": "^2.5.3",
     "@graphql-codegen/typescript-react-query": "^4.0.1",
     "@graphql-codegen/typescript-resolvers": "^2.7.3",
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
     "contentful": "^9.2.5",
     "postcss-syntax": "^0.36.2",
-    "stylelint": "^14.13.0",
     "tsconfig-paths": "^4.1.0",
     "typescript": "4.8.4"
   }
