feat: 検索条件のフォーム要素をひととおり置いた

--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -26,8 +26,10 @@
     "@headlessui/react": "^1.7.3",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-aspect-ratio": "1.0.0",
+    "@radix-ui/react-checkbox": "^1.0.0",
     "@radix-ui/react-label": "^1.0.0",
     "@radix-ui/react-separator": "^1.0.0",
+    "@radix-ui/react-slider": "^1.0.0",
     "@tanstack/react-query": "^4.10.3",
     "apollo-server-micro": "^3.10.3",
     "graphql": "^16.6.0",
