fix: yaern export時に落ちる箇所を修正

--- a/picker-app/tsconfig.json
+++ b/picker-app/tsconfig.json
@@ -23,6 +23,7 @@
       "server/*": ["server/*"],
       "features/*": ["features/*"],
       "components/*": ["components/*"],
+      "graphql/*": ["graphql/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
