--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "i": "yarn install",
     "dev": "PICKER_ENV='local' && yarn workspace picker-app dev",
+    "build": "yarn workspace picker-app build",
     "export": "yarn workspace picker-app export",
     "codegen": "yarn workspace picker-types codegen && yarn workspace picker-app codegen"
   },
