--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "yarn codegen && next dev",
-    "build": "yarn codegen && next build",
+    "build": "yarn codegen && next build && yarn sitemap",
     "export": "yarn codegen && next build && next export",
     "start": "yarn codegen && next start",
     "lint": "next lint",
@@ -14,7 +14,8 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'",
     "codegen": "yarn workspace picker-types codegen && yarn codegen:nexus && yarn codegen:graphql",
     "codegen:nexus": "ts-node -r tsconfig-paths/register --compiler-options '{\"module\":\"CommonJS\"}' --transpile-only src/graphql/nexus-schema.ts",
-    "codegen:graphql": "graphql-codegen --config src/graphql/codegen.ts"
+    "codegen:graphql": "graphql-codegen --config src/graphql/codegen.ts",
+    "sitemap": "next-sitemap --config next-sitemap.js"
   },
   "dependencies": {
     "@emotion/css": "^11.10.0",
@@ -37,6 +38,7 @@
     "lodash-es": "^4.17.21",
     "micro": "^9.4.1",
     "next": "12.3.1",
+    "next-seo": "^5.6.0",
     "nexus": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -54,6 +56,7 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "contentful": "^9.2.5",
+    "next-sitemap": "^3.1.25",
     "postcss-syntax": "^0.36.2",
     "tsconfig-paths": "^4.1.0",
     "typescript": "4.8.4"
