--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -34,6 +34,8 @@
     "@radix-ui/react-slider": "^1.0.0",
     "@tanstack/react-query": "^4.10.3",
     "apollo-server-micro": "^3.10.3",
+    "chart.js": "^3.9.1",
+    "chartjs-plugin-datalabels": "^2.1.0",
     "graphql": "^16.6.0",
     "lodash-es": "^4.17.21",
     "micro": "^9.4.1",
@@ -41,6 +43,7 @@
     "next-seo": "^5.6.0",
     "nexus": "^1.3.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.37.0",
     "sass": "^1.55.0"
