--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "trailingComma": "es5",
   "singleQuote": true,
   "arrowParens": "avoid",
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "bracketSpacing": true
 }
