feat: バックエンドからフロントにスパイク詳細の情報が渡るように修正、スパイクの強み欄のアイコンの適用方法も修正

--- a/picker-app/tsconfig.json
+++ b/picker-app/tsconfig.json
@@ -26,7 +26,7 @@
       "graphql/*": ["graphql/*"],
       "layout/*": ["layout/*"],
       "pages/*": ["pages/*"],
-      "shared/*": ["shared/*"],
+      "shared/*": ["shared/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
