feat: スパイク詳細ページをほぼ仕上げた

--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-aspect-ratio": "1.0.0",
     "@radix-ui/react-checkbox": "^1.0.0",
     "@radix-ui/react-label": "^1.0.0",
+    "@radix-ui/react-scroll-area": "^1.0.1",
     "@radix-ui/react-separator": "^1.0.0",
     "@radix-ui/react-slider": "^1.0.0",
     "@tanstack/react-query": "^4.10.3",
