react-router-breadcrumbsアンインストールとnext seoでの作成開始

--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -48,8 +48,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.37.0",
     "recoil": "^0.7.6",
-    "sass": "^1.55.0",
-    "use-react-router-breadcrumbs": "^4.0.1"
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.2",
