--- a/picker-scripts/package.json
+++ b/picker-scripts/package.json
@@ -26,5 +26,7 @@
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
   },
-  "dependencies": {}
+  "volta": {
+    "extends": "../package.json"
+  }
 }
