--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "yarn codegen && next dev",
     "build": "yarn codegen && next build && yarn sitemap",
-    "analyze": "ANALYZE=true&&yarn codegen && next build && yarn sitemap",
+    "analyze": "ANALYZE=true&&yarn build",
     "export": "yarn codegen && next build && next export",
     "start": "yarn codegen && next start",
     "lint": "next lint",
@@ -19,54 +19,54 @@
     "sitemap": "next-sitemap --config next-sitemap.js"
   },
   "dependencies": {
-    "@emotion/css": "^11.10.0",
-    "@emotion/react": "^11.10.4",
+    "@emotion/css": "^11.10.5",
+    "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@headlessui/react": "^1.7.3",
-    "@next/bundle-analyzer": "^13.0.1",
+    "@headlessui/react": "^1.7.7",
+    "@next/bundle-analyzer": "^13.1.1",
     "@radix-ui/colors": "^0.1.8",
-    "@radix-ui/react-aspect-ratio": "1.0.0",
-    "@radix-ui/react-checkbox": "^1.0.0",
-    "@radix-ui/react-label": "^1.0.0",
-    "@radix-ui/react-scroll-area": "^1.0.1",
-    "@radix-ui/react-separator": "^1.0.0",
-    "@radix-ui/react-slider": "^1.0.0",
-    "@tanstack/react-query": "^4.10.3",
-    "apollo-server-micro": "^3.10.3",
-    "chart.js": "^3.9.1",
-    "chartjs-plugin-datalabels": "^2.1.0",
+    "@radix-ui/react-aspect-ratio": "1.0.1",
+    "@radix-ui/react-checkbox": "^1.0.1",
+    "@radix-ui/react-label": "^2.0.0",
+    "@radix-ui/react-scroll-area": "^1.0.2",
+    "@radix-ui/react-separator": "^1.0.1",
+    "@radix-ui/react-slider": "^1.1.0",
+    "@tanstack/react-query": "^4.20.4",
+    "apollo-server-micro": "^3.11.1",
+    "chart.js": "^4.1.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "graphql": "^16.6.0",
     "lodash-es": "^4.17.21",
-    "micro": "^9.4.1",
-    "next": "13.0.1",
-    "next-seo": "^5.11.1",
+    "micro": "^10.0.1",
+    "next": "13.1.1",
+    "next-seo": "^5.15.0",
     "nexus": "^1.3.0",
     "react": "18.2.0",
-    "react-chartjs-2": "^4.3.1",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.38.0",
+    "react-hook-form": "^7.41.2",
     "recoil": "^0.7.6",
-    "sass": "^1.55.0"
+    "sass": "^1.57.1"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.10.2",
-    "@graphql-codegen/cli": "^2.13.5",
-    "@graphql-codegen/typescript": "^2.7.3",
-    "@graphql-codegen/typescript-operations": "^2.5.3",
-    "@graphql-codegen/typescript-react-query": "^4.0.1",
-    "@graphql-codegen/typescript-resolvers": "^2.7.3",
+    "@emotion/babel-plugin": "^11.10.5",
+    "@graphql-codegen/cli": "^2.16.2",
+    "@graphql-codegen/typescript": "^2.8.6",
+    "@graphql-codegen/typescript-operations": "^2.5.11",
+    "@graphql-codegen/typescript-react-query": "^4.0.6",
+    "@graphql-codegen/typescript-resolvers": "^2.7.11",
     "@types/lodash-es": "^4.17.6",
-    "@types/react": "18.0.24",
-    "@types/react-dom": "18.0.8",
-    "contentful": "^9.2.9",
-    "next-sitemap": "^3.1.29",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "contentful": "^9.2.14",
+    "next-sitemap": "^3.1.43",
     "postcss-syntax": "^0.36.2",
-    "tsconfig-paths": "^4.1.0",
-    "typescript": "4.8.4"
+    "tsconfig-paths": "^4.1.1",
+    "typescript": "4.9.4"
   },
   "volta": {
     "extends": "../package.json"
