--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -43,6 +43,7 @@
     "lodash-es": "^4.17.21",
     "micro": "^10.0.1",
     "next": "13.1.1",
+    "next-auth": "^4.18.7",
     "next-seo": "^5.15.0",
     "nexus": "^1.3.0",
     "react": "18.2.0",
