--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.7.1",
+    "prettier-plugin-prisma": "^4.8.0",
     "stylelint": "^14.13.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recess-order": "^3.0.0",
