--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -13,9 +13,11 @@
     "lint:css": "stylelint ./src/**/*.{css,js,jsx,ts,tsx}",
     "fix:css": "stylelint ./src/**/*.{css,js,jsx,ts,tsx} --fix",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'",
-    "codegen": "yarn workspace picker-types codegen && yarn codegen:nexus && yarn codegen:graphql",
+    "codegen": "yarn workspace picker-types codegen && yarn codegen:nexus && yarn codegen:graphql && yarn codegen:prisma",
     "codegen:nexus": "ts-node -r tsconfig-paths/register --compiler-options '{\"module\":\"CommonJS\"}' --transpile-only ./src/graphql/nexus-schema.ts",
     "codegen:graphql": "graphql-codegen --config src/graphql/codegen.ts",
+    "codegen:prisma": "prisma generate --schema=src/server/prisma/schema.prisma",
+    "migrate:prisma": "prisma migrate dev --schema=src/server/prisma/schema.prisma",
     "sitemap": "next-sitemap --config next-sitemap.js"
   },
   "dependencies": {
@@ -25,9 +27,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.7",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/bundle-analyzer": "^13.1.1",
+    "@prisma/client": "^4.8.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-aspect-ratio": "1.0.1",
     "@radix-ui/react-checkbox": "^1.0.1",
@@ -66,6 +71,7 @@
     "contentful": "^9.2.14",
     "next-sitemap": "^3.1.43",
     "postcss-syntax": "^0.36.2",
+    "prisma": "^4.8.0",
     "tsconfig-paths": "^4.1.1",
     "typescript": "4.9.4"
   },
