--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -25,9 +25,9 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.7",
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -35,6 +35,7 @@
     "@prisma/client": "^4.8.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-aspect-ratio": "1.0.1",
+    "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-label": "^2.0.0",
     "@radix-ui/react-scroll-area": "^1.0.2",
