feat: DBからGraphQL経由でマイページの情報を取得してフロントで受け取るところまで

--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -13,7 +13,7 @@
     "lint:css": "stylelint ./src/**/*.{css,js,jsx,ts,tsx}",
     "fix:css": "stylelint ./src/**/*.{css,js,jsx,ts,tsx} --fix",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'",
-    "codegen": "yarn workspace picker-types codegen && yarn codegen:nexus && yarn codegen:graphql && yarn codegen:prisma",
+    "codegen": "yarn workspace picker-types codegen && yarn codegen:prisma && yarn codegen:nexus && yarn codegen:graphql",
     "codegen:nexus": "ts-node -r tsconfig-paths/register --compiler-options '{\"module\":\"CommonJS\"}' --transpile-only ./src/graphql/nexus-schema.ts",
     "codegen:graphql": "graphql-codegen --config src/graphql/codegen.ts",
     "codegen:prisma": "prisma generate --schema=src/server/prisma/schema.prisma",
@@ -52,6 +52,7 @@
     "next-auth": "^4.18.7",
     "next-seo": "^5.15.0",
     "nexus": "^1.3.0",
+    "nexus-prisma": "^0.35.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "18.2.0",
