--- a/picker-app/package.json
+++ b/picker-app/package.json
@@ -17,7 +17,7 @@
     "codegen:nexus": "ts-node -r tsconfig-paths/register --compiler-options '{\"module\":\"CommonJS\"}' --transpile-only ./src/graphql/nexus-schema.ts",
     "codegen:graphql": "graphql-codegen --config src/graphql/codegen.ts",
     "codegen:prisma": "prisma generate --schema=src/server/prisma/schema.prisma",
-    "migrate:prisma": "prisma migrate dev --schema=src/server/prisma/schema.prisma",
+    "migrate:prisma": "dotenv -e ../.env -- prisma migrate dev --schema=src/server/prisma/schema.prisma",
     "sitemap": "next-sitemap --config next-sitemap.js"
   },
   "dependencies": {
@@ -32,7 +32,7 @@
     "@headlessui/react": "^1.7.7",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/bundle-analyzer": "^13.1.1",
-    "@prisma/client": "^4.8.0",
+    "@prisma/client": "^4.9.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-aspect-ratio": "1.0.1",
     "@radix-ui/react-avatar": "^1.0.1",
@@ -52,7 +52,7 @@
     "next-auth": "^4.18.7",
     "next-seo": "^5.15.0",
     "nexus": "^1.3.0",
-    "nexus-prisma": "^0.35.0",
+    "nexus-prisma": "^1.0.3",
     "react": "18.2.0",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "18.2.0",
@@ -71,9 +71,10 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "contentful": "^9.2.14",
+    "dotenv-cli": "^7.0.0",
     "next-sitemap": "^3.1.43",
     "postcss-syntax": "^0.36.2",
-    "prisma": "^4.8.0",
+    "prisma": "^4.9.0",
     "tsconfig-paths": "^4.1.1",
     "typescript": "4.9.4"
   },
